--- a/index.html
+++ b/index.html
@@ -5,9 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Assignment</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <!-- header section start -->
+    <header>
+        <section class="header-section">
+            <div class="header-div">
+                <h1 class="header-title">All Thinks Are <br> Possible If You <br> believe</h1>
+                <p class="header-discription">There are many variations of passages of Lorem Ipsum <br>
+                    available, but the majority have suffered alteration in some <br>
+                    form, by injected humour, or randomised words</p>
+                    <button class="btn-header">Contact Us</button>
+            </div>
+        </section>
+    </header>
+    <!-- header section end -->
+
+    <!-- main section start -->
+    <main>
+        <section class="prev-year">
+            <div class="img-section">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="text-section">
+                <h1>My failures of <br> previous year</h1>
+                <p>For many people, the New Year is a fantastic <br> time to start new habits and to wipe the slate <br> clean of all that has happened in the previous year. <br> This means that each year. <br></p>
+                <ul>
+                    <ol>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular belief.</li>
+                        <li>Contrary to popular , is not simply.</li>
+                        <li>Contrary to popular belief, is not simply.</li>
+                        <li>Contrary to popular simply.</li>
+                    </ol>
+                </ul>
+            </div>
+        </section>
+    </main>
+    <!-- main section end -->
+
+    <!-- footer section start -->
+    <footer></footer>
+    <!-- footer section end -->
 </body>
 </html>
